--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </div>
   <div id="main">
     <section id="top" class="one">
-      <div class="container small"> <a href="#" class="image featured"><img src="images/pic01.jpg" alt=""></a>
+      <div class="container small"> <a href="#" class="image featured"><img src="images/pic01.JPG" alt=""></a>
         <header>
           <h2 class="alt">Nihao! <span class="small-text">(Hello)</span> I'm Shengjie. </h2>
         </header>
