--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section id="top" class="one">
       <div class="container small"> <a href="#" class="image featured"><img src="images/pic01.JPG" alt=""></a>
         <header>
-          <h2 class="alt">Nihao! <span class="small-text">(Hello)</span> I'm Shengjie. </h2>
+          <h2 class="alt">Hello! I'm Shengjie. </h2>
         </header>
         <p>I'm currently a grad student in Computer Software Engineering program in Northeastern University Seattle. I
           will graduate in 2024 and am actively looking for Software Developer position in the US. I have previous
