--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="top">
       <div id="logo"> <span class="image avatar48"><img src="images/avatar.jpg" alt=""></span>
         <h1 id="title">Shengjie Mao</h1>
-        <span class="byline">Grad Student in Computer Software Engineering Program</span>
+        <span class="byline">Software Developer Candidate</span>
       </div>
       <nav id="nav">
         <ul>
@@ -49,7 +49,6 @@
         <li><a href="https://www.linkedin.com/in/shengjie-m/" class="icon icon-linkedin"><span>LinkedIn</span></a></li>
         <li><a href="https://github.com/ShengjieMao" class="icon icon-github"><span>Github</span></a></li>
         <li><a href="mailto:itsgloriamo@gmail.com" class="icon icon-envelope"><span>Email</span></a></li>
-        <li><a href="tel:+17759810935" class="icon icon-phone"><span>Phone</span></a></li>
       </ul>
     </div>
   </div>
@@ -60,8 +59,8 @@
           <h2 class="alt">Hello! I'm Shengjie.</h2>
         </header>
         <p>I'm currently a grad student in Computer Software Engineering program in Northeastern University Seattle. I
-          will graduate in 2024 and am actively looking for Software Developer position in the US. I have previous
-          experience in IT and research, and more projects in software and technology. Learn more about me by navigating
+          will graduate in Dec 2024 and am actively looking for Software Developer position. I have previous
+          experience in IT and Software Development, and more projects and research experience in tech. Learn more about me by navigating
           to my following pages!</p>
         <footer> <a href="#portfolio" class="button scrolly">Learn more</a> </footer>
       </div>
@@ -71,14 +70,13 @@
         <header>
           <h2>Projects and Works</h2>
         </header>
-        <p>I have been IT intern, Machine Learning intern, and Research Assistant within these years. Besides these
+        <p>I have been SDE intern, IT intern, Machine Learning intern, and Research Assistant within these years. Besides these
           real-world experience, I have also finished many projects including full-stack website, Machine Learning
           models, database design, <a
             href="https://www.linkedin.com/in/shengjie-m/overlay/1635477429312/single-media-viewer/?profileId=ACoAACLz_NwBCwmhw3jVi1dCsD7WwceGh947HfQ">UI/UX
             modification</a>, <a
             href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Electronic%20Arts/a77WE3de8qrxWferQ_Electronic%20Arts_2oZktzAu7uK57ihNF_1693900972787_completion_certificate.pdf">game
-            design</a>, and so many other topics! Click on the thumbnails below to access my <strong>most favourite
-            projects</strong> or
+            design</a>, and so many other topics! Click on the thumbnails below to access some of my previous <strong>projects</strong> or
           view more on my Gitub or Linkedin pages.</p>
         <div class="row">
           <div class="4u">
@@ -86,12 +84,14 @@
                   src="images/pic02.png" alt=""></a>
               <header>
                 <h3>Data Algorithm Note Full-stack App</h3>
+                <h4>Javascript, ReactJS, HTML, CSS, Netlify</h4>
               </header>
             </article>
             <article class="item"> <a href="https://github.com/ShengjieMao/job-track-webapp" class="image full"><img
                   src="images/pic03.png" alt=""></a>
               <header>
                 <h3>Job Application Tracking Web App</h3>
+                <h4>Javascript, ExpressJS, NodeJS, Restful API, ReactJS</h4>
               </header>
             </article>
           </div>
@@ -100,12 +100,14 @@
                   src="images/pic04.png" alt=""></a>
               <header>
                 <h3>Clinic Management Database Design</h3>
+                <h4>MongoDB, MySQL</h4>
               </header>
             </article>
             <article class="item"> <a href="https://github.com/ShengjieMao/Group026-Sp22" class="image full"><img
                   src="images/pic05.jpeg" alt=""></a>
               <header>
                 <h3>Dog Breed Classification - Machine Learning</h3>
+                <h4>Python, Supervised Learning</h4>
               </header>
             </article>
           </div>
@@ -114,6 +116,7 @@
                   src="images/pic06.png" alt=""></a>
               <header>
                 <h3>Ecommerce Web app</h3>
+                <h4>Java, Angular, Springboot, TypeScript, MySQL, Restful API</h4>
               </header>
             </article>
             <article class="item"> <a href="https://buildlimited.weebly.com/" class="image full"><img
@@ -132,15 +135,13 @@
           <h2>About Me</h2>
         </header>
         <a href="#" class="image featured"><img src="images/pic08.jpeg" alt=""></a>
-        <p>This is Shengjie. I'm currently a second-year graduate student in Computer Software Engineering program in
+        <p>This is Shengjie. I'm currently a graduate student in Computer Software Engineering program in
           Northeastern
-          University, Seattle campus. A fun fact about me is that for my past 4 years, I stayed in San Diego, which is
-          the left bottom corner of the US. And now I move to Seattle, which is the upper left courner! </p>
+          University, Seattle campus. </p>
         <p>I'm working hard to become a <strong>software engineer</strong> ever since I disvovered the beauty of coding.
           I have experienced a lotttttt these years while I was searching for my career goals. I will be really happy to
           talk with you if you want to learn more about my ability or if you share the same goal as mine.</p>
-        <p>I really like to play games -- video games and table games! I also like to go hiking and trying different
-          foods (I'm always waiting for a friend to go trying out all of my pinned resturants!). Recent new interests on
+        <p>Recent new interests on
           my todo list: surfing🏄, photographing📹, and carpentry🪑. Contact me if you'd like to learn more about
           me/hang out with me!</p>
       </div>
@@ -149,7 +150,7 @@
   </div>
   <div id="footer">
     <div class="copyright">
-      <p>&copy; 2023 Shengjie Mao. All rights reserved.</p>
+      <p>&copy; 2024 Shengjie Mao. All rights reserved.</p>
     </div>
   </div>
 </body>
